--- a/.classpath
+++ b/.classpath
@@ -6,12 +6,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="actions"/>
-	<classpathentry kind="src" path="testdatas"/>
 	<classpathentry kind="src" path="interfaces"/>
 	<classpathentry kind="src" path="testcases"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
-	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar" sourcepath="libraries/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="librarieslog4j/commons-codec-1.11.jar"/>
 	<classpathentry kind="lib" path="librarieslog4j/commons-io-2.6.jar"/>
 	<classpathentry kind="lib" path="librarieslog4j/commons-lang3-3.8.1.jar"/>
@@ -51,5 +50,9 @@
 	<classpathentry kind="lib" path="libreportNG/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="lib" path="libreportNG/guice-3.0.jar"/>
 	<classpathentry kind="lib" path="libreportNG/reportng-1.1.4.jar"/>
+	<classpathentry kind="lib" path="libfaker/commons-lang3-3.5.jar"/>
+	<classpathentry kind="lib" path="libfaker/generex-1.0.2.jar"/>
+	<classpathentry kind="lib" path="libfaker/javafaker-1.0.1.jar"/>
+	<classpathentry kind="lib" path="libfaker/snakeyaml-1.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
